Bug 464963 - Haruna does not play videos with an "#" in the filename. No picture, no sound.
Summary: Haruna does not play videos with an "#" in the filename. No picture, no sound.
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-28 22:48 UTC by Irorcaiaturor
Modified: 2023-01-29 06:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Irorcaiaturor 2023-01-28 22:48:07 UTC
SUMMARY
***
Haruna will not play any videos an "#" in the filename. No picture, no sound.
***


STEPS TO REPRODUCE
1. Add a "#" to the filename, e.g. "Castle #1.mkv"
2. Open the file in Haruna

OBSERVED RESULT
Nothing happens. Haruna will not play the video as long as there is "#" somewhere in the filename.

EXPECTED RESULT
Haruna will play the video.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 george fb 2023-01-29 06:59:52 UTC
Git commit 7fda24c785c4045fb533b245d5c72fb0788a11e2 by George Florea Bănuș.
Committed on 29/01/2023 at 06:59.
Pushed by georgefb into branch 'master'.

playlistmodel: getSiblingItems: use percent-encoded path with QUrl

ensures the correct mime type is returned and the file is added to the playlist

M  +4    -1    src/models/playlistmodel.cpp

https://invent.kde.org/multimedia/haruna/commit/7fda24c785c4045fb533b245d5c72fb0788a11e2