playlistmodel: getSiblingItems: use percent-encoded path with QUrl

ensures the correct mime type is returned and the file is added to the playlist

BUG: 464963